--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
         <span>L</span>
         <span>L</span>
         <span>O</span>
-        <span>D</span>
-        <span>I</span>
-        <span>Y</span>
+        <span>F</span>
         <span>A</span>
+        <span>R</span>
+        <span>K</span>
+        <span>I</span>
     </div>
     <div class="description">
         <span>HAPY 19 TAHUN YAAA</span>
